welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:2: error: value min_value is not a member of object Integer
  var tab = Array(Integer.min_value, Integer.min_value)
                          ^max2Value:2: error: value min_value is not a member of object Integer
  var tab = Array(Integer.min_value, Integer.min_value)
                                             ^